Fix platform flow, team CRUD, routing, bots, and runbook